fixed scrollbar + fade out

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a {
 
 body {
   height: 100vh;
-  width: 100vw;
+  width: 99.5vw;
   color: var(--tx);
   font-family: "Inter", sans-serif;
   font-size: 16px;
